--- a/style.css
+++ b/style.css
@@ -393,7 +393,7 @@
 
 .voucher img {
     width: 100%;
-    max-width: auto;
+    max-width: 1000px;
     height: auto;
     aspect-ratio: 8.5 / 2.75;
     border-radius: 6px;
