--- a/style.css
+++ b/style.css
@@ -399,9 +399,14 @@
     border-radius: 6px;
 }
 @media (max-width: 480px) {
-    .voucher img {
-        aspect-ratio: 8.5 / 3.5;
-    }
+  .voucher img {
+    width: 100%;
+    max-width: 500px;
+    height: auto;
+    aspect-ratio: 8.5 / 2.75;
+    border-radius: 6px;
+}
+
 }
 /* Responsive design */
 @media (max-width: 768px) {
