--- a/style.css
+++ b/style.css
@@ -402,7 +402,7 @@
   .voucher img {
     width: 100%;
     max-width: 400px;
-    height: auto;
+    height: 400px;
     aspect-ratio: 8.5 / 2.75;
     border-radius: 6px;
 }
